<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.user.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/logoutBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green"
            app:menu="@menu/logout_menu"
            app:title="@string/user_fragment_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="8dp"
        android:src="@drawable/unsplash_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:maxLines="3"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <LinearLayout
        android:id="@+id/user_data"
        android:layout_marginVertical="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/usernameImg"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginVertical="3dp"
                android:src="@drawable/ic_baseline_person_outline_24"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:maxWidth="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/user_data_text_size"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/location_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/location_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="3dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_outline_location_on_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/location"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:maxWidth="150dp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/user_data_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/emailImg"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginVertical="3dp"
                android:src="@drawable/ic_email"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/email"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxWidth="150dp"
                android:maxLines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:text="@string/user_email"
                android:textColor="@color/black"
                android:textSize="@dimen/user_data_text_size"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/barrier"
        app:constraint_referenced_ids="avatar, user_data"
        app:barrierDirection="bottom"/>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@color/grey"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/swipeRefresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier">

        <TextView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black" />

    </FrameLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photoRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/photo_view_holder" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/recycler_progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_100"
        android:paddingHorizontal="45dp"
        android:paddingVertical="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/no_connection"
            android:textColor="#F63F3F" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_wifi_off"
            app:tint="@color/error_text" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
