<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.photos.details.OnePhotoDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/shareBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/green"
                app:menu="@menu/share_menu"
                app:title="@string/one_photo_fragment_title" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="343dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    tools:srcCompat="@tools:sample/backgrounds/scenic"
                    android:contentDescription="@string/content_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:background="#80000000"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/authorAvatar"
                        android:layout_width="37dp"
                        android:layout_height="37dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_launcher_foreground"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/authorName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/authorAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <androidx.legacy.widget.Space
                        android:id="@+id/space"
                        android:layout_width="0dp"
                        android:layout_height="49dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/currentLikes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/isLiked"
                        android:layout_width="14dp"
                        android:layout_height="13dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="#00FFFFFF"
                        app:srcCompat="@drawable/like_selector" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp">

                    <ImageView
                        android:id="@+id/location_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:focusable="true"
                        app:srcCompat="@drawable/ic_outline_location_on_24" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="362dp"
                        android:layout_height="match_parent"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tags"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_gravity="top|center"
                    android:layout_margin="8dp"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/exif"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:lineSpacingExtra="2sp"
                        android:textAlignment="textStart" />

                    <androidx.legacy.widget.Space
                        android:id="@+id/space2"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/about_author"
                            android:layout_width="140dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="12dp"
                            android:lineSpacingExtra="2sp"
                            android:textAlignment="textStart" />
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="32dp">

                    <TextView
                        android:id="@+id/downloadsCount"
                        android:layout_width="174dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="textEnd" />

                    <ImageButton
                        android:id="@+id/downloadButton"
                        android:layout_width="18dp"
                        android:layout_height="24dp"
                        android:layout_gravity="bottom|start"
                        android:backgroundTint="#00FFFFFF"
                        app:srcCompat="@drawable/download_line" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_100"
            android:paddingHorizontal="45dp"
            android:paddingVertical="5dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/no_connection"
                android:textColor="#F63F3F" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_wifi_off"
                app:tint="@color/error_text" />
        </FrameLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>